# spotia-tui

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
.config/: config.json5
.github/workflows/: cd.yml
src/: action.rs  app.rs  auth.rs  components.rs  event.rs  handler.rs  lib.rs  main.rs  mode.rs  spotify.rs  tui.rs  ui.rs  update.rs
src/components/: download.rs  home.rs  manager.rs  spotify.rs
