[package]
name = "spotia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
crossterm = "0.27.0"
ratatui = "0.26.0"
rspotify = { version = "0.12.0", features = ["env-file", "cli"] }
tokio = { version = "1.36.0", features = ["full"] }
