[package]
name = "spotia2"
version = "0.1.0"
authors = ["myschkin <kenan.henzelin@proton.me>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
futures-util = "0.3.30"
ratatui = "0.26.0"
rspotify = { version = "0.12.0", features = ["env-file", "cli"] }
tokio = { version = "1.35.1", features = ["full"] }
